--- a/src/Components/FormHeader/FormHeader.scss
+++ b/src/Components/FormHeader/FormHeader.scss
@@ -4,7 +4,7 @@
    flex-wrap: wrap;
    justify-content: space-around;
    width: 100%;
-   height: 60px;
+   height: 10vh;
    position: relative;
    background-color: #eeeeee;
    font-family: inter;
@@ -21,7 +21,7 @@
    .FormHeaderButton{
     display:flex;
     flex: 1 1 11.1%;
-    max-height: 60px;
+    height: inherit;
     cursor: pointer;
     &::after{
         content: "";
@@ -39,7 +39,7 @@
     }
 
     &:hover{
-        box-shadow: inset 0px 0px 10px 0px rgba(70, 80, 255, 0.50);
+        box-shadow: inset 0px 0px 10px 0px rgba(171, 171, 171, 0.5);
     }
     }
 
@@ -54,7 +54,7 @@
             margin: 0 10%;
             position: absolute;
             bottom: -3px;
-            background-color: #000fff;
+            background-color: rgba(0, 17, 255, 0.7);
             transition: 1s ease-out;
             
         }
